catch interactive code
